# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
brain_games/: cli.py  engine.py  game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
