[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Brain Games project"
authors = ["denkitaev den.kitaev364@ya.ru"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console"
]
repository = "https://github.com/denis-kitaev/python-project-lvl1.git"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
